--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,44 @@ ul {
   color: black;
   background-color: white;
 }
+
+#rock,
+#pop,
+#hiphop,
+#searchResults {
+  color: white;
+  font-weight: 700;
+  padding-top: 50px;
+}
+
+.mainPage img {
+  width: 200px;
+}
+
+.mainLinks {
+  margin-top: 1.5rem;
+  justify-content: space-evenly;
+}
+
+.toplink {
+  color: white;
+  font-weight: 700;
+  font-size: 12px;
+  opacity: 0.3;
+  text-decoration: none;
+}
+
+.toplink:hover {
+  text-decoration: none;
+  opacity: 1;
+  transition: 0.3s;
+}
+
+#hipHopSection {
+  margin-bottom: 7rem;
+}
+
+body {
+  background: rgb(46, 63, 87);
+  background: linear-gradient(90deg, rgb(63, 86, 119) 0%, rgba(33, 44, 61, 1) 42%, rgb(15, 21, 29) 100%);
+}
